<resources>
    <string name="app_name">WWB InspectionApp</string>
    <string name="large_text">
        "Material is the metaphor.\n
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n"
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="str_no_data_available">No Data Available</string>
    <string name="str_father_name">Father Name</string>
    <string name="str_essi">ESSI #</string>
    <string name="str_institute">Institute</string>
    <string name="str_course">Course</string>
    <string name="str_session">Session</string>
    <string name="str_student_name">Student Name</string>
    <string name="str_worker_name">Worker Name</string>
    <string name="str_dependent_legal_heir">Dependent (Legal Heir)</string>
    <string name="str_date_of_death">Date of Death</string>
    <string name="str_contact">Contact</string>


</resources>